# swigex0

./: .gitignore  CMakeLists.txt  Makefile  README.md  version.h.in
.github/workflows/: coverage-tests_python.yml  coverage-tests_r.yml  nonreg-demos-courses_ubuntu-latest.yml  nonreg-demos-courses_ubuntu16 test.yml  nonreg-demos-courses_ubuntu16.yml  nonreg-test.yml  nonreg-test_linux.yml  nonreg-test_ubuntu-latest.yml  nonreg-test_windows.yml  nonreg-test_windows_visual.yml  nonreg-tests.yml  nonreg-tests_macos-11.yml  nonreg-tests_macos-latest.yml  nonreg-tests_ubuntu-latest.yml  nonreg-tests_windows-2019-rtools.yml  nonreg-tests_windows-latest-msvc.yml  nonreg-tests_windows-latest-rtools.yml  publish-doc.yml  publish.yml  publish_demos.yml  publish_demos2.yml  publish_doxygen.yml  publish_python.yml  publish_python_gstlearn.yml  publish_python_linux.yml  publish_python_macos-11.yml  publish_python_macos.yml  publish_python_ubuntu-16.yml  publish_python_ubuntu.yml  publish_python_windows-2019.yml  publish_python_windows.yml  publish_r_macos-11.yml  publish_r_macos.yml  publish_r_ubuntu-16.yml  publish_r_ubuntu.yml  publish_r_windows-2019.yml  publish_r_windows.yml  test_r_script.yml
cmake/: FindR.cmake  cpp.cmake  doxygen.cmake  install.cmake
deploy/: pythonBuild.sh  pythonBuildTest.sh
doc/demo/: CMakeLists.txt
doc/demo/python/: CMakeLists.txt  testDownload.ipynb  testFibo.ipynb  testGstlearn.ipynb
doc/demo/r/: CMakeLists.txt  testFibo.Rmd
docs/: README.md
include/: VectorNumT.hpp  VectorT.hpp  args.hpp  fibo.hpp  fibo_define.hpp  myfibo_export.hpp  polymorph.hpp  stdoutredirect.hpp  typemap.hpp
python/: CMakeLists.txt  README.md  __init__.py.in  fibo.i  pyfibo.i  pyswigex.i  run_test.py  run_test_ipynb.py  setup.py  setup.py.in
r/: CMakeLists.txt  DESCRIPTION.in  FindR.cmake  NAMESPACE.in  README.md  do_skeleton.R.in  rfibo.i  rfibo_loader.R  rswigex.i  run_test_rmd.R  test_r_script.R
r/doc/: doxy2rd.py
r/modules/: fibo.R
src/: CMakeLists.txt  VectorNumT.cpp  VectorT.cpp  args.cpp  fibo.cpp  polymorph.cpp  stdoutredirect.cpp  typemap.cpp
swig/: swig_exp.i  swig_inc.i
tests/: CMakeLists.txt  main.cpp
tests/cpp/: CMakeLists.txt  main.cpp  main.ref  testArgs.cpp  testArgs.ref  testFibo.cpp  testPolymorph.cpp  testPolymorph.ref  testVectorT.cpp  testVectorT.ref
tests/ipynb/: CMakeLists.txt
tests/ipynb/output/: testDownload.asciidoc  testFibo.asciidoc  testGstlearn.asciidoc
tests/py/: CMakeLists.txt  main.py  main.ref  testArgs.py  testArgs.ref  testFibo.py  testFibo.ref  testPolymorph.py  testPolymorph.ref  testTypemap.py  testTypemap.ref
tests/r/: CMakeLists.txt  main.r  main.ref  testArgs.r  testArgs.ref  testArgs_old.ref  testFibo.r  testFibo.ref  testPolymorph.r  testPolymorph.ref  testTypemap.r  testTypemap.ref
tests/rmd/: CMakeLists.txt
